@@ -154,6 +154,9 @@
 #define SQLR_ERROR_LASTINSERTIDNOTSUPPORTED 900015
 #define SQLR_ERROR_LASTINSERTIDNOTSUPPORTED_STRING \
 	"Get last insert id not supported."
+#define SQLR_ERROR_INVALIDBINDVARIABLEFORMAT 900016
+#define SQLR_ERROR_INVALIDBINDVARIABLEFORMAT_STRING \
+	"Invalid bind variable format."
 
 enum clientsessiontype_t {
 	SQLRELAY_CLIENT_SESSION_TYPE=0,
